<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.DetailsActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_alignParentBottom="true"
        android:onClick="youtube"
        android:layout_margin="16dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_youtube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <TextView
            android:onClick="openDeveloperFB"
            android:layout_margin="16dp"
            android:id="@+id/dev"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/dev_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_above="@id/dev"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
                android:id="@+id/videoplayer"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:onClick="downloadMP3"
                            android:layout_margin="5dp"
                            android:drawableLeft="@drawable/ic_download"
                            android:text="@string/mp3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <Button
                            android:onClick="downloadMP4"
                            android:layout_margin="5dp"
                            android:drawableRight="@drawable/ic_download"
                            android:text="@string/mp4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        app:cardCornerRadius="6dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        app:cardElevation="6dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:padding="8dp"
                            android:id="@+id/info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textColor="@android:color/holo_red_light"
                                android:gravity="center"
                                android:text="@string/if_you_want_mp3"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"/>

                            <Button
                                android:onClick="downloadMP3"
                                android:layout_margin="5dp"
                                android:drawableLeft="@drawable/ic_download"
                                android:text="@string/mp3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:textColor="@android:color/holo_red_light"
                                android:gravity="center"
                                android:text="@string/tap_it"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"/>
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textColor="@android:color/holo_red_light"
                                android:gravity="center"
                                android:text="@string/if_you_want_mp4"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"/>

                            <Button
                                android:onClick="downloadMP4"
                                android:layout_margin="5dp"
                                android:drawableRight="@drawable/ic_download"
                                android:text="@string/mp4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:textColor="@android:color/holo_red_light"
                                android:gravity="center"
                                android:text="@string/click_and"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"/>
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:textColor="@android:color/holo_red_light"
                        android:gravity="center"
                        android:text="@string/you_can_download"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
</RelativeLayout>